test: 배열을 통한 세부적인 테스트 추가